5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4410/executions/1633_2918.log
== TEST (2019-04-02 19:03:55) 
-- CODE:
ingresso = 100
desconto = 20
precoPromocional = precolngresso - (precolngresso*(desconto/100))
print = ingresso-desconto
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    precoPromocional = precolngresso - (precolngresso*(desconto/100))
NameError: name 'precolngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:09) 
-- CODE:
ingresso = 100
desconto = 20
precoPromocional = precolngresso - (precolngresso*(desconto/100))
print = ingresso - desconto
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    precoPromocional = precolngresso - (precolngresso*(desconto/100))
NameError: name 'precolngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:22) 
-- CODE:
ingresso = 100
desconto = 20
print = ingresso - desconto
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    precoPromocional = precolngresso - (precolngresso*(desconto/100))
NameError: name 'precolngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:43) 
-- CODE:
ingresso = 100
desconto = 20
print =int(ingresso - desconto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    precoPromocional = precolngresso - (precolngresso*(desconto/100))
NameError: name 'precolngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:53) 
-- CODE:
ingresso = 100
desconto = 20
print=int(ingresso - desconto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    precoPromocional = precolngresso - (precolngresso*(desconto/100))
NameError: name 'precolngresso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:00) 
-- CODE:
ingresso = 100
desconto = 20
print=int(ingresso - desconto)
-- EXECUTION TIME:
0.151665
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:

-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:

-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:17) 
-- CODE:
ingresso = 100
desconto = 20
print=float(ingresso - desconto)
-- EXECUTION TIME:
0.120051
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:

-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:

-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:05:36) 
-- CODE:
ingresso = 100
desconto = 20
print = float(ingresso - desconto)
-- EXECUTION TIME:
0.157549
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:

-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:

-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
